--- a/Match-Statistics.ipynb
+++ b/Match-Statistics.ipynb
@@ -101,15 +101,15 @@
     "    mu = trials * p\n",
     "    sigma = math.sqrt(trials * p * (1.0 - p))\n",
     "    delta = abs(mu - successes)\n",
-    "    z_binomial = 2.0 * stats.binom.cdf(mu - delta, trials, p) if (delta > 0) else 1.0\n",
-    "    z_normal = 2.0 * (1.0 - stats.norm.cdf((delta - 0.5) / sigma)) if (delta > 0) else 1.0\n",
-    "    reject = (z_binomial < alpha)\n",
+    "    p_binomial = 2.0 * stats.binom.cdf(mu - delta, trials, p) if (delta > 0) else 1.0\n",
+    "    p_normal = 2.0 * (1.0 - stats.norm.cdf((delta - 0.5) / sigma)) if (delta > 0) else 1.0\n",
+    "    reject = (p_binomial < alpha)\n",
     "    \n",
     "    if not silent:\n",
     "        print(\"Expected number of successes after {0} Bernoulli trials (p = {1:.1%}): {2}\".format(trials, p, mu))\n",
     "        print(\"Observed successes after {0} Bernoulli trials: {1}\".format(trials, successes))\n",
-    "        print(\"Probability of observing ≤ {0} or ≥ {1} successes: {2:.4%}    (binomial distribution)\".format((mu - delta), (mu + delta), z_binomial))\n",
-    "        print(\"Probability of observing ≤ {0} or ≥ {1} successes: {2:.4%}    (normal approximation)\".format((mu - delta), (mu + delta), z_normal))\n",
+    "        print(\"Probability of observing ≤ {0} or ≥ {1} successes: {2:.4%}    (binomial distribution)\".format((mu - delta), (mu + delta), p_binomial))\n",
+    "        print(\"Probability of observing ≤ {0} or ≥ {1} successes: {2:.4%}    (normal approximation)\".format((mu - delta), (mu + delta), p_normal))\n",
     "        if reject:\n",
     "            print(\"At an α = {0} confidence level, we REJECT the null hypothesis that p = {1}.\".format(alpha, p))\n",
     "        else:\n",
@@ -192,6 +192,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Fairness Tests: Matches\n",
+    "\n",
     "Let's restrict the query to the thirty most recent, completed matches -- about 30% of the available data -- and also repeat the hypothesis test for each match, independently."
    ]
   },
@@ -201,74 +203,215 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = 30\n",
+    "def present_match_black_white_win_rate(query, title, history = 30):\n",
+    "    match_count = 0\n",
+    "    match_black_victories = []\n",
+    "    match_white_victories = []\n",
+    "    match_dates = []\n",
+    "    match_rejects = []\n",
+    "    total_black_victories = 0\n",
+    "    total_white_victories = 0\n",
+    "    black_rejects = 0\n",
+    "    white_rejects = 0\n",
     "\n",
-    "match_count = 0\n",
-    "match_black_victories = []\n",
-    "match_white_victories = []\n",
-    "match_dates = []\n",
-    "match_rejects = []\n",
-    "total_black_victories = 0\n",
-    "total_white_victories = 0\n",
-    "black_rejects = 0\n",
-    "white_rejects = 0\n",
+    "    with sqlite3.connect(db_path) as sql:\n",
+    "        cursor = sql.execute(query + \" LIMIT ?\", [history])\n",
     "\n",
-    "with sqlite3.connect(db_path) as sql:\n",
-    "    cursor = sql.execute(\"SELECT Game.match_id, Match.start_date, SUM(case [victor] when 1 then 1 else 0 end) as [black], SUM(case [victor] when 2 then 1 else 0 end) as [white]\"\n",
-    "                         \" FROM Game\"\n",
-    "                         \" JOIN Match ON Game.match_id = Match.id\"\n",
-    "                         \" WHERE Match.result is not null\"\n",
-    "                         \" GROUP BY Game.match_id, Match.start_date\"\n",
-    "                         \" ORDER BY Match.start_date DESC\"\n",
-    "                         \" LIMIT ?\", [history])\n",
-    "    \n",
-    "    for r in cursor:\n",
-    "        (match_id, start_date, black_victories, white_victories) = r\n",
-    "        total_black_victories += black_victories\n",
-    "        total_white_victories += white_victories\n",
-    "        \n",
-    "        reject = test_fairness((black_victories + white_victories), 0.5, black_victories, alpha, silent=True)\n",
-    "        if (reject) and (black_victories > white_victories):\n",
-    "            black_rejects = black_rejects + 1\n",
-    "        elif (reject) and (white_victories > black_victories):\n",
-    "            white_rejects = white_rejects + 1\n",
-    "        \n",
-    "        match_count = match_count + 1\n",
-    "        match_black_victories.append(black_victories)\n",
-    "        match_white_victories.append(white_victories)\n",
-    "        match_dates.append(start_date)\n",
-    "        match_rejects.append((max(black_victories, white_victories) + 10) if reject else None)\n",
+    "        for r in cursor:\n",
+    "            (match_id, start_date, black_victories, white_victories) = r\n",
+    "            total_black_victories += black_victories\n",
+    "            total_white_victories += white_victories\n",
     "\n",
-    "print(\"Black won {0} games; white won {1}.\".format(total_black_victories, total_white_victories))\n",
-    "print()\n",
+    "            reject = test_fairness((black_victories + white_victories), 0.5, black_victories, alpha, silent=True)\n",
+    "            if (reject) and (black_victories > white_victories):\n",
+    "                black_rejects = black_rejects + 1\n",
+    "            elif (reject) and (white_victories > black_victories):\n",
+    "                white_rejects = white_rejects + 1\n",
     "\n",
-    "test_fairness((total_black_victories + total_white_victories), 0.5, total_black_victories, alpha)\n",
+    "            match_count = match_count + 1\n",
+    "            match_black_victories.append(black_victories)\n",
+    "            match_white_victories.append(white_victories)\n",
+    "            match_dates.append(start_date)\n",
+    "            match_rejects.append((max(black_victories, white_victories) + 10) if reject else None)\n",
     "\n",
-    "pyplot.figure()\n",
-    "pyplot.pie([total_black_victories, total_white_victories],\n",
-    "           labels = ['black', 'white'], colors = ['lightcoral', 'lightskyblue'], explode = (0.01, 0),\n",
-    "           autopct = '%1.4f%%', shadow=False, startangle=70)\n",
-    "pyplot.axis('equal')\n",
-    "pyplot.show()\n",
-    "            \n",
-    "match_index = np.arange(match_count)\n",
+    "    print(\"Black won {0} games; white won {1}.\".format(total_black_victories, total_white_victories))\n",
+    "    print()\n",
     "\n",
-    "pyplot.figure(figsize=(12, 6))\n",
-    "pyplot.bar(match_index, match_black_victories, 0.4, color='lightcoral', label='black')\n",
-    "pyplot.bar(match_index + 0.4, match_white_victories, 0.4, color='lightskyblue', label='white')\n",
-    "pyplot.scatter(match_index + 0.2, match_rejects, marker='x', color='red')\n",
+    "    test_fairness((total_black_victories + total_white_victories), 0.5, total_black_victories, alpha)\n",
     "\n",
-    "pyplot.suptitle('Black-White Win-Rates')\n",
-    "pyplot.title('(last {0} matches)'.format(history))\n",
-    "pyplot.ylabel('victories')\n",
-    "pyplot.xticks(match_index + 0.2, match_dates, rotation=90)\n",
-    "pyplot.legend(bbox_to_anchor=(1.11, 1.0), loc='upper right', borderaxespad=0)\n",
-    "pyplot.show()\n",
+    "    pyplot.figure()\n",
+    "    pyplot.pie([total_black_victories, total_white_victories],\n",
+    "               labels = ['black', 'white'], colors = ['lightcoral', 'lightskyblue'], explode = (0.01, 0),\n",
+    "               autopct = '%1.4f%%', shadow=False, startangle=70)\n",
+    "    pyplot.axis('equal')\n",
+    "    pyplot.show()\n",
     "\n",
-    "print()\n",
-    "print(\"Data from {0} of {1} recent matches proved sufficient to reject the null hypothesis at α = {2}.\".format(sum(r is not None for r in match_rejects), len(match_rejects), alpha))\n",
-    "print(\"{0} of these matches favoured black; {1} of these favoured white.\".format(black_rejects, white_rejects))"
+    "    match_index = np.arange(match_count)\n",
+    "\n",
+    "    pyplot.figure(figsize=(12, 6))\n",
+    "    pyplot.bar(match_index, match_black_victories, 0.4, color='lightcoral', label='black')\n",
+    "    pyplot.bar(match_index + 0.4, match_white_victories, 0.4, color='lightskyblue', label='white')\n",
+    "    pyplot.scatter(match_index + 0.2, match_rejects, marker='x', color='red')\n",
+    "\n",
+    "    pyplot.suptitle('Black-White Win-Rates')\n",
+    "    pyplot.title(title.format(history))\n",
+    "    pyplot.ylabel('victories')\n",
+    "    pyplot.xticks(match_index + 0.2, match_dates, rotation=90)\n",
+    "    pyplot.legend(bbox_to_anchor=(1.11, 1.0), loc='upper right', borderaxespad=0)\n",
+    "    pyplot.show()\n",
+    "\n",
+    "    print()\n",
+    "    print(\"Data from {0} of {1} recent matches proved sufficient to reject the null hypothesis at α = {2}.\".format(sum(r is not None for r in match_rejects), len(match_rejects), alpha))\n",
+    "    print(\"{0} of these matches favoured black; {1} of these favoured white.\".format(black_rejects, white_rejects))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT Game.match_id, Match.start_date, SUM(case [victor] when 1 then 1 else 0 end) as [black], SUM(case [victor] when 2 then 1 else 0 end) as [white]\n",
+    " FROM Game\n",
+    " JOIN Match ON Game.match_id = Match.id\n",
+    " WHERE Match.result is not null\n",
+    " GROUP BY Game.match_id, Match.start_date\n",
+    " ORDER BY Match.start_date DESC\n",
+    "\"\"\"\n",
+    "present_match_black_white_win_rate(query, '(last {0} matches)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT Game.match_id, start_date, SUM(case Game.victor when 1 then 1 else 0 end) as [black], SUM(case Game.victor when 2 then 1 else 0 end) as [white]\n",
+    " FROM Game\n",
+    " JOIN Match ON Match.id = Game.match_id\n",
+    " JOIN Network challenger ON challenger.id = Match.challenger\n",
+    " WHERE challenger.promoted\n",
+    " GROUP BY Game.match_id\n",
+    " ORDER BY start_date DESC\n",
+    "\"\"\"\n",
+    "present_match_black_white_win_rate(query, '(last {0} matches that resulted in promotion)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT Game.match_id, start_date, SUM(case Game.victor when 1 then 1 else 0 end) as [black], SUM(case Game.victor when 2 then 1 else 0 end) as [white]\n",
+    " FROM Game\n",
+    " JOIN GameVictor on GameVictor.game_id = Game.id\n",
+    " JOIN MatchVictor on (MatchVictor.match_id = Game.match_id) and (MatchVictor.victor = GameVictor.victor)\n",
+    " GROUP BY Game.match_id\n",
+    " ORDER BY start_date DESC\n",
+    "\"\"\"\n",
+    "present_match_black_white_win_rate(query, '(last {0} matches, match victor only)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fairness Tests: Networks\n",
+    "\n",
+    "Do individual networks have a predilection for white? Let's take a look at the data. We must turn to [Fischer's Exact Test](https://en.wikipedia.org/wiki/Fisher's_exact_test) and ask a new question: does *Leela Zero* win more, as white, than she does as black?\n",
+    "\n",
+    "The *null hypothesis* becomes the following: the win-rate of a network is not significantly higher when *Leela Zero* plays as white."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def present_network_black_white_win_rate(query, title, history = 30):\n",
+    "    network_count = 0\n",
+    "    network_black_victories = []\n",
+    "    network_white_victories = []\n",
+    "    network_hashes = []\n",
+    "    network_rejects = []\n",
+    "\n",
+    "    with sqlite3.connect(db_path) as sql:\n",
+    "        cursor = sql.execute(query + \" LIMIT ?\", [history])\n",
+    "\n",
+    "        for r in cursor:\n",
+    "            (network_id, upload_date, black_games, black_victories, white_games, white_victories) = r\n",
+    "            \n",
+    "            contingency = [[black_victories, white_victories],\n",
+    "                           [black_games - black_victories, white_games - white_victories]]\n",
+    "            (_, p) = stats.fisher_exact(contingency, alternative='less')\n",
+    "            reject = (p < alpha)\n",
+    "\n",
+    "            network_count = network_count + 1\n",
+    "            network_black_victories.append(black_victories)\n",
+    "            network_white_victories.append(white_victories)\n",
+    "            network_hashes.append(network_id[0:8])\n",
+    "            network_rejects.append((max(black_victories, white_victories) + 50) if reject else None)\n",
+    "\n",
+    "    domain = np.arange(network_count)\n",
+    "\n",
+    "    pyplot.figure(figsize=(12, 6))\n",
+    "    pyplot.bar(domain, network_black_victories, 0.4, color='lightcoral', label='black')\n",
+    "    pyplot.bar(domain + 0.4, network_white_victories, 0.4, color='lightskyblue', label='white')\n",
+    "    pyplot.scatter(domain + 0.2, network_rejects, marker='x', color='red')\n",
+    "\n",
+    "    pyplot.suptitle('Black-White Win-Rates')\n",
+    "    pyplot.title(title.format(history))\n",
+    "    pyplot.ylabel('victories')\n",
+    "    pyplot.xticks(domain + 0.2, network_hashes, rotation=90)\n",
+    "    pyplot.legend(bbox_to_anchor=(1.11, 1.0), loc='upper right', borderaxespad=0)\n",
+    "    pyplot.show()\n",
+    "\n",
+    "    print()\n",
+    "    print(\"Data from {0} of {1} networks proved sufficient to reject the null hypothesis at α = {2}.\".format(sum(r is not None for r in network_rejects), len(network_rejects), alpha))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look at the most recent promoted networks and, for intrigues sake, the most recent failed challengers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT Network.id, Network.upload_date,\n",
+    " SUM(case when Network.id = Game.black then 1 else 0 end) as black_games,\n",
+    " SUM(case when victor = 1 and Network.id = Game.black then 1 else 0 end) as black_victories,\n",
+    " SUM(case when Network.id = Game.white then 1 else 0 end) as white_games,\n",
+    " SUM(case when victor = 2 and Network.id = Game.white then 1 else 0 end) as white_victories\n",
+    " FROM Network\n",
+    " JOIN Game on Game.black = Network.id OR Game.white = Network.id\n",
+    " WHERE Network.promoted={0}\n",
+    " GROUP BY Network.id\n",
+    " ORDER BY Network.upload_date DESC\n",
+    "\"\"\"\n",
+    "\n",
+    "present_network_black_white_win_rate(query.format(1), '(last {0} promoted networks)')\n",
+    "present_network_black_white_win_rate(query.format(0), '(last {0} failed challengers)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
