Began extending analysis of the black-white win-rate to self-play games.

--- a/Match-Statistics.ipynb
+++ b/Match-Statistics.ipynb
@@ -42,6 +42,9 @@
     "# Leela Zero Training Match Database\n",
     "db_path = 'data/leela-zero.db'\n",
     "\n",
+    "# Leela Zero SGF Path\n",
+    "sgf_path = '...'\n",
+    "\n",
     "# Confidence Level for Hypothesis Tests\n",
     "alpha = 0.01"
    ]
@@ -301,23 +304,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"\"\"\n",
-    "SELECT Game.match_id, start_date, SUM(case Game.victor when 1 then 1 else 0 end) as [black], SUM(case Game.victor when 2 then 1 else 0 end) as [white]\n",
-    " FROM Game\n",
-    " JOIN GameVictor on GameVictor.game_id = Game.id\n",
-    " JOIN MatchVictor on (MatchVictor.match_id = Game.match_id) and (MatchVictor.victor = GameVictor.victor)\n",
-    " GROUP BY Game.match_id\n",
-    " ORDER BY start_date DESC\n",
-    "\"\"\"\n",
-    "present_match_black_white_win_rate(query, '(last {0} matches, match victor only)')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -407,6 +393,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fairness Tests: Self-Play Games"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -419,6 +412,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(sgf.get_result(os.path.join(sgf_path, '51c142b4e6b14269a26b201878b4a45b.sgf')))"
+   ]
   },
   {
    "cell_type": "code",
