Began extending analysis of the black-white win-rate to self-play games.

--- a/Match-Statistics.ipynb
+++ b/Match-Statistics.ipynb
@@ -42,9 +42,6 @@
     "# Leela Zero Training Match Database\n",
     "db_path = 'data/leela-zero.db'\n",
     "\n",
-    "# Leela Zero SGF Path\n",
-    "sgf_path = '...'\n",
-    "\n",
     "# Confidence Level for Hypothesis Tests\n",
     "alpha = 0.01"
    ]
@@ -404,14 +401,61 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def present_self_play_black_white_win_rate(query, title, history = 30):\n",
+    "    data_count = 0\n",
+    "    data_black_victories = []\n",
+    "    data_white_victories = []\n",
+    "    data_ticks = []\n",
+    "    data_rejects = []\n",
+    "    total_black_victories = 0\n",
+    "    total_white_victories = 0\n",
+    "\n",
+    "    with sqlite3.connect(db_path) as sql:\n",
+    "        cursor = sql.execute(query + \" LIMIT ?\", [history])\n",
+    "\n",
+    "        for r in cursor:\n",
+    "            (id, upload_date, black_victories, white_victories) = r\n",
+    "            total_black_victories += black_victories\n",
+    "            total_white_victories += white_victories\n",
+    "\n",
+    "            reject = test_fairness((black_victories + white_victories), 0.5, black_victories, alpha, silent=True)\n",
+    "\n",
+    "            data_count = data_count + 1\n",
+    "            data_black_victories.append(black_victories)\n",
+    "            data_white_victories.append(white_victories)\n",
+    "            data_ticks.append(id[0:8])\n",
+    "            data_rejects.append((max(black_victories, white_victories) + 10) if reject else None)\n",
+    "\n",
+    "    print(\"Black won {0} games; white won {1}.\".format(total_black_victories, total_white_victories))\n",
+    "    print()\n",
+    "\n",
+    "    test_fairness((total_black_victories + total_white_victories), 0.5, total_black_victories, alpha)\n",
+    "\n",
+    "    pyplot.figure()\n",
+    "    pyplot.pie([total_black_victories, total_white_victories],\n",
+    "               labels = ['black', 'white'], colors = ['lightcoral', 'lightskyblue'], explode = (0.01, 0),\n",
+    "               autopct = '%1.4f%%', shadow=False, startangle=70)\n",
+    "    pyplot.axis('equal')\n",
+    "    pyplot.show()\n",
+    "\n",
+    "    data_index = np.arange(data_count)\n",
+    "\n",
+    "    pyplot.figure(figsize=(12, 6))\n",
+    "    pyplot.bar(data_index, data_black_victories, 0.4, color='lightcoral', label='black')\n",
+    "    pyplot.bar(data_index + 0.4, data_white_victories, 0.4, color='lightskyblue', label='white')\n",
+    "    pyplot.scatter(data_index + 0.2, data_rejects, marker='x', color='red')\n",
+    "\n",
+    "    pyplot.suptitle('Black-White Win-Rates')\n",
+    "    pyplot.title(title.format(history))\n",
+    "    pyplot.ylabel('victories')\n",
+    "    pyplot.xticks(data_index + 0.2, data_ticks, rotation=90)\n",
+    "    pyplot.legend(bbox_to_anchor=(1.11, 1.0), loc='upper right', borderaxespad=0)\n",
+    "    pyplot.show()\n",
+    "\n",
+    "    print()\n",
+    "    print(\"Self-Play Data from {0} of {1} networks proved sufficient to reject the null hypothesis at α = {2}.\".format(sum(r is not None for r in data_rejects), len(data_rejects), alpha))"
+   ]
   },
   {
    "cell_type": "code",
@@ -419,8 +463,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(sgf.get_result(os.path.join(sgf_path, '51c142b4e6b14269a26b201878b4a45b.sgf')))"
+    "query = \"\"\"\n",
+    "SELECT\n",
+    " Network.id, Network.upload_date,\n",
+    " SUM(case victor when 1 then 1 else 0 end) as black_victories,\n",
+    " SUM(case victor when 2 then 1 else 0 end) as white_victories\n",
+    " FROM SelfPlay\n",
+    " JOIN Network on Network.id = SelfPlay.network\n",
+    " GROUP BY network\n",
+    " ORDER BY upload_date DESC\n",
+    "\"\"\"\n",
+    "present_self_play_black_white_win_rate(query.format(1), '(self-play games)')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -447,7 +508,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fetch Web Data\n",
+    "## Data Sources\n",
+    "\n",
+    "### Fetch Web Data\n",
     "\n",
     "Scrape http://zero.sjeng.org/ for data from Leela Zero's training matches and store that data in a Sqlite database that can be queried offline."
    ]
@@ -459,6 +522,24 @@
    "outputs": [],
    "source": [
     "web.fetch_database(db_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Self-Training SGF Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Leela Zero SGF Path\n",
+    "sgf_path = r\"~~~\"\n",
+    "sgf.import_self_plays(db_path, sgf_path)"
    ]
   },
   {
