Completed scrutiny of Leela Zero's win-rate for black and white.

--- a/Match-Statistics.ipynb
+++ b/Match-Statistics.ipynb
@@ -425,7 +425,7 @@
     "            data_black_victories.append(black_victories)\n",
     "            data_white_victories.append(white_victories)\n",
     "            data_ticks.append(id[0:8])\n",
-    "            data_rejects.append((max(black_victories, white_victories) + 10) if reject else None)\n",
+    "            data_rejects.append((max(black_victories, white_victories) + 400) if reject else None)\n",
     "\n",
     "    print(\"Black won {0} games; white won {1}.\".format(total_black_victories, total_white_victories))\n",
     "    print()\n",
@@ -466,14 +466,14 @@
     "query = \"\"\"\n",
     "SELECT\n",
     " Network.id, Network.upload_date,\n",
-    " SUM(case victor when 1 then 1 else 0 end) as black_victories,\n",
-    " SUM(case victor when 2 then 1 else 0 end) as white_victories\n",
+    " black_victories,\n",
+    " white_victories\n",
     " FROM SelfPlay\n",
-    " JOIN Network on Network.id = SelfPlay.network\n",
-    " GROUP BY network\n",
+    " JOIN Network on Network.id = SelfPlay.network_id\n",
+    " GROUP BY SelfPlay.network_id\n",
     " ORDER BY upload_date DESC\n",
     "\"\"\"\n",
-    "present_self_play_black_white_win_rate(query.format(1), '(self-play games)')"
+    "present_self_play_black_white_win_rate(query.format(1), '(self-play games)', history=5)"
    ]
   },
   {
@@ -537,10 +537,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Leela Zero SGF Path\n",
-    "sgf_path = r\"~~~\"\n",
-    "sgf.import_self_plays(db_path, sgf_path)"
+    "sgf_path = r\"~ ~ ~/all.sgf\"\n",
+    "\n",
+    "def report_progress(imported, failed, ignored):\n",
+    "    display.clear_output(wait = True)\n",
+    "    print('{0} self-play game records imported. ({1} failed, {2} ignored)'.format(imported, failed, ignored))\n",
+    "    \n",
+    "sgf.import_self_plays(db_path, sgf_path, report_progress)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
